# object-storage-maintenance

./: Cargo.toml  Containerfile  Dockerfile  Makefile  README.md  compose.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yaml
src/: commands.rs  compressor.rs  error.rs  helpers.rs  main.rs  object_storage.rs  s3.rs  storage.rs  tokio_to_async.rs  uploader.rs
src/compressor/: tests.rs
