[package]
name = "object-storage-maintenance"
version = "0.2.40"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.42", features = ["tokio", "xz"] }
aws-sdk-s3 = { version = "1.138.1", features = ["behavior-version-latest", "rt-tokio", "http-1x", "rustls"] }
aws-types = "1.4.0"
chrono = "0.4.45"
clap = { version = "4.6.2", features = ["derive"] }
futures = "0.3.32"
mimalloc = { version = "0.1.52", features = ["extended"] }
tokio = { version = "1.53.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tar = "0.3.1"

[profile.dev]
debug = true
incremental = true
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[profile.release.package."*"]
codegen-units = 1
debug = false
opt-level = 3
strip = true
