[package]
name = "object-storage-maintenance"
version = "0.3.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.42", features = ["tokio", "xz"] }
bytes = "1.12.1"
chrono = "0.4.45"
clap = { version = "4.6.2", features = ["derive"] }
futures = "0.3.33"
object_store = { version = "0.14.1", features = ["aws", "azure", "gcp", "http", "tokio"] }
tokio = { version = "1.53.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tar = "0.3.1"
tokio-util = { version = "0.7.18", features = ["io", "compat"] }
thiserror = "2.0.19"
url = "2.5.8"

[lints.rust]
linker_messages = "allow"
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
needless_for_each = { level = "allow", priority = 1 }

[profile.dev]
debug = true
incremental = true
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[profile.release.package."*"]
codegen-units = 1
debug = false
opt-level = 3
strip = true
